--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@syncfusion/ej2-react-charts": "^20.3.48",
+    "@syncfusion/ej2": "^19.4.48",
+    "@syncfusion/ej2-react-charts": "^19.4.50",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
