--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-charts": "^2.0.0-beta.7",
     "react-cookie": "^4.1.1",
+    "react-date-picker": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
