--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^4.4.0",
+    "@capacitor/android": "4.4.0",
     "@capacitor/core": "^4.4.0",
     "@react-icons/all-files": "^4.1.0",
     "@syncfusion/ej2": "^19.4.48",
