--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
     "chart.js": "^3.9.1",
+    "mongoose": "^6.7.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-charts": "^2.0.0-beta.7",
