--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
     "chart.js": "^3.9.1",
+    "dayjs": "^1.11.7",
     "leaflet-routing-machine": "^3.2.12",
     "mongoose": "^6.7.3",
     "react": "^18.2.0",
