--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-leaflet": "3.0.2",
+    "react-leaflet-markercluster": "3.0.0-rc1"
   },
   "scripts": {
     "start": "react-scripts start",
