--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.0.0",
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
+    "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "mongoose": "^6.7.3",
     "react": "^18.2.0",
@@ -24,14 +25,14 @@
     "react-date-picker": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
-    "web-vitals": "^2.1.4",
-    "react-leaflet": "3.0.2",
-    "react-leaflet-markercluster": "3.0.0-rc1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
