--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "dependencies": {
     "@capacitor/android": "4.4.0",
     "@capacitor/core": "^4.4.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/montserrat": "^4.5.13",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.11.1",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/react-stripe-js": "^2.1.0",
@@ -17,6 +25,7 @@
     "axios": "^1.0.0",
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "mongoose": "^6.7.3",
@@ -26,26 +35,17 @@
     "react-cookie": "^4.1.1",
     "react-date-picker": "^9.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-loader-spinner": "^5.3.4",
+    "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/montserrat": "^4.5.13",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.11.1",
-    "formik": "^2.2.9",
-    "react-icons": "^4.7.1",
-    "react-multi-carousel": "^2.8.2",
     "yup": "^0.32.11"
   },
   "scripts": {
